--- a/lab/index.html
+++ b/lab/index.html
@@ -48,6 +48,28 @@
       font-size: 14px;
     }
 
+    .search {
+      margin-top: 16px;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+    }
+
+    .search input {
+      flex: 1;
+      min-width: 220px;
+      padding: 10px 12px;
+      border-radius: 10px;
+      border: 1px solid var(--ring);
+      background: #fff;
+      font-size: 14px;
+    }
+
+    .search input:focus {
+      outline: 2px solid rgba(31, 35, 40, 0.2);
+      outline-offset: 2px;
+    }
+
     main {
       max-width: 980px;
       margin: 0 auto;
@@ -117,12 +139,19 @@
       color: var(--muted);
       margin: 0;
     }
+
+    .is-hidden {
+      display: none;
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>Lab</h1>
     <div class="subtitle">小さな実験ページのインデックス。増えていく前提で、静かに並べる。</div>
+    <div class="search">
+      <input id="searchInput" type="search" placeholder="タイトルや説明で検索" aria-label="タイトルや説明で検索">
+    </div>
   </header>
 
   <main>
@@ -147,5 +176,23 @@
       <p class="note">新しいページを追加したらここにリンクを足していく想定です。</p>
     </section>
   </main>
+
+  <script>
+    const searchInput = document.getElementById("searchInput");
+    const cards = Array.from(document.querySelectorAll(".grid .card"));
+
+    const normalize = (text) => text.toLowerCase().replace(/\s+/g, " ").trim();
+
+    searchInput.addEventListener("input", (event) => {
+      const query = normalize(event.target.value);
+      cards.forEach((card) => {
+        const title = card.querySelector(".card-title")?.textContent || "";
+        const desc = card.querySelector(".card-desc")?.textContent || "";
+        const haystack = normalize(`${title} ${desc}`);
+        const match = query === "" || haystack.includes(query);
+        card.classList.toggle("is-hidden", !match);
+      });
+    });
+  </script>
 </body>
 </html>
