--- a/lab/lrc/index.html
+++ b/lab/lrc/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LRCタイムスタンプ作成ツール（β）</title>
+  <title>LRC tiimestamp tool</title>
+  <meta name="description" content="音源と歌詞を読み込んで、クリックでタイムスタンプを付与。" />
   <style>
     * {
       box-sizing: border-box;
