--- a/lab/lrc/index.html
+++ b/lab/lrc/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LRC tiimestamp tool</title>
+  <title>LRC Timestamp Tool</title>
   <meta name="description" content="音源と歌詞を読み込んで、クリックでタイムスタンプを付与。" />
   <style>
     * {
