--- a/lab/histogram/index.html
+++ b/lab/histogram/index.html
@@ -226,6 +226,7 @@
             </thead>
             <tbody>
               <tr><td>count</td><td id="count">-</td></tr>
+              <tr><td>zero</td><td id="zeroCount">-</td></tr>
               <tr><td>mean</td><td id="mean">-</td></tr>
               <tr><td>std</td><td id="stddev">-</td></tr>
               <tr><td>min</td><td id="min">-</td></tr>
@@ -580,6 +581,7 @@
     const updateStats = (values) => {
       if (values.length === 0) {
         document.getElementById("count").textContent = "-";
+        document.getElementById("zeroCount").textContent = "-";
         document.getElementById("mean").textContent = "-";
         document.getElementById("min").textContent = "-";
         document.getElementById("p25").textContent = "-";
@@ -594,6 +596,8 @@
       const min = Math.min(...values);
       const max = Math.max(...values);
       const mean = values.reduce((sum, v) => sum + v, 0) / values.length;
+      const zeroCount = values.reduce((sum, v) => sum + (v === 0 ? 1 : 0), 0);
+      const zeroPct = (zeroCount / values.length) * 100;
       const variance =
         values.reduce((sum, v) => sum + Math.pow(v - mean, 2), 0) / values.length;
       const stddev = Math.sqrt(variance);
@@ -605,6 +609,7 @@
       const p95 = quantile(sorted, 0.95);
 
       document.getElementById("count").textContent = values.length;
+      document.getElementById("zeroCount").textContent = `${zeroCount} (${zeroPct.toFixed(2)}%)`;
       document.getElementById("mean").textContent = formatStat(mean);
       document.getElementById("min").textContent = formatStat(min);
       document.getElementById("p25").textContent = formatStat(p25);
