--- a/lab/spotify_history_viz/index.html
+++ b/lab/spotify_history_viz/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MY SPOTIFY DATA</title>
+  <title>My Spotify Data</title>
   <meta name="description" content="私のSpotifyデータを可視化。" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -12,7 +12,7 @@
   <main class="page">
     <section class="header">
       <div>
-        <h1>MY SPOTIFY DATA</h1>
+        <h1>My Spotify Data</h1>
       </div>
       <div class="controls">
         <button id="rangeToggle" class="range" type="button">
