--- a/lab/scatter/index.html
+++ b/lab/scatter/index.html
@@ -219,7 +219,7 @@
     <section class="panel fade-in">
       <div class="grid">
         <div>
-          <label for="dataInput">データ（タブ/カンマ/空白区切り、最大10列）</label>
+          <label for="dataInput">データ（タブ/カンマ/空白区切り）</label>
           <textarea id="dataInput" placeholder="x	y	...&#10;22	14	&#10;30	16	&#10;28	23	"></textarea>
           <div class="muted" style="margin-top: 6px;" id="delimiterNote"></div>
           <div class="muted" style="margin-top: 6px;" id="skipNotice"></div>
